hide overflow-x to fix extra space on right side of page

--- a/static/src/scss/_base.scss
+++ b/static/src/scss/_base.scss
@@ -8,6 +8,7 @@ html, body {
     font-size: 16px;
     line-height: 150%;
     background: $c-white;
+	overflow-x: hidden;
 
     @include size(100% 100%);
     @include font-feature-settings("liga", "kern");
